@@ -3,6 +3,7 @@
 
 package com.azure.monitor.opentelemetry.exporter.implementation.quickpulse;
 
+import com.azure.core.credential.BasicAuthenticationCredential;
 import com.azure.core.credential.TokenCredential;
 import com.azure.core.http.HttpClient;
 import com.azure.core.http.HttpPipeline;
@@ -19,6 +20,7 @@ import com.azure.core.test.models.CustomMatcher;
 import com.azure.core.test.utils.MockTokenCredential;
 import com.azure.core.util.FluxUtil;
 import com.azure.identity.ClientSecretCredentialBuilder;
+import com.azure.identity.DefaultAzureCredentialBuilder;
 import com.azure.monitor.opentelemetry.exporter.implementation.NoopTracer;
 import com.azure.monitor.opentelemetry.exporter.implementation.builders.RemoteDependencyTelemetryBuilder;
 import com.azure.monitor.opentelemetry.exporter.implementation.builders.RequestTelemetryBuilder;
@@ -43,11 +45,7 @@ public class QuickPulseTestBase extends TestProxyTestBase {
     HttpPipeline getHttpPipelineWithAuthentication() {
         if (getTestMode() == TestMode.RECORD || getTestMode() == TestMode.LIVE) {
             TokenCredential credential =
-                new ClientSecretCredentialBuilder()
-                    .tenantId(System.getenv("AZURE_TENANT_ID"))
-                    .clientSecret(System.getenv("AZURE_CLIENT_SECRET"))
-                    .clientId(System.getenv("AZURE_CLIENT_ID"))
-                    .build();
+                new DefaultAzureCredentialBuilder().managedIdentityClientId("AZURE_CLIENT_ID").build();
             return getHttpPipeline(
                 new BearerTokenAuthenticationPolicy(
                     credential, APPLICATIONINSIGHTS_AUTHENTICATION_SCOPE));
@@ -68,7 +66,7 @@ public class QuickPulseTestBase extends TestProxyTestBase {
             httpClient = interceptorManager.getPlaybackClient();
             interceptorManager.addMatchers(
                 Arrays.asList(new BodilessMatcher(), new CustomMatcher()
-                    .setHeadersKeyOnlyMatch(Arrays.asList("x-ms-qps-transmission-time"))));
+                    .setHeadersKeyOnlyMatch(List.of("x-ms-qps-transmission-time"))));
         }
         return new HttpPipelineBuilder()
             .httpClient(httpClient)
